# devrec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
devlog/: cli.py  export.py  logger.py  main.py  session.py
devlog/dashboard/: index.html  styles.css  toggle-mode.js
devrec/: cli.py  logger.py  session.py
static/: index.html  styles.css
tests/: test_cli.py
